[B]v1.00 (23 March 2015):[/B]
- Oficial submittion to Kodi repo.
- Some fixes and changes.

[B]v0.1.00 (13 de Novembro de 2014):[/B]
- Correccao de caracteres nao codificados.
- Plugin pode ser chamado de fora do addon (ex: plugin://plugin.video.sapo/?mode=5&url=http://videos.sapo.pt/qAUkoLFQegUKv0jDDs33&name=Nomedovideo)
- Outras correccoes.

[B]v0.0.06 (21 de Junho de 2014):[/B]
- Correccao global ao novo layout do site.
- Outras melhorias e correccoes.
- Limitacao temporaria: apenas mostra primeira pagina
- Limitacao temporaria: caracteres invalidos

[B]v0.0.05 (10 de Fevereiro de 2014):[/B]
- Adicionado suporte a directos.
- Outras correccoes.

[B]v0.0.04 (21 de Dezembro de 2013):[/B]
- Suporte a Gotham.

[B]v0.0.03 (3 de Novembro de 2013):[/B]
- Corrigido erro de script em alguns videos.
- Adicionada area de categorias.
- Adicionado suporte a pesquisa de videos.
- Melhorias de performance.
- Correccao de bug que impedia o uso em versoes gotham.

[B]v0.0.02 (30 de Junho de 2013):[/B]
- Mudanca de servidor.
- Outras alteracoes.

[B]v0.0.01 (7 de Fevereiro de 2013):[/B]
- Primeira release