@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-   <category label="nada">
+   <category label="30014">
       <setting id="nada" type="bool" label="nada" default="true" visible="false"/>
    </category>
 </settings>
